tdf#153039 submitting XML from XForms document

regression from
    commit 5fd2f0b93bd7d38a277823bfc251c71da7a6f490
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Thu Jan 12 09:19:03 2023 +0200
    use concrete class in Submission

Change-Id: I99bc069b5243e994da71287960e29be6ab3338ac
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145567
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>